--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   text-align: center;
 }
@@ -35,4 +39,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* ANT DESIGN CUSTOM STYLE RULES */
+.ant-picker-input > input {
+  color: white !important;
+}
+
+.ant-picker-input > input::placeholder {
+  color: white !important;
 }
